# relationaldocs

./: .gitignore  README.md
.claude/: claude_settings.json  settings.local.json
.claude/agents/: architect.md  code-reviewer.md  docs-reviewer.md
.claude/rules/: adapters-rules.md  api-rules.md  core-rules.md  frontend-rules.md  markdown-rules.md  test-rules.md
.claude/skills/add-adapter/: SKILL.md
.claude/skills/add-endpoint/: SKILL.md
.claude/skills/generate-test/: SKILL.md
.claude/skills/setup-project/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
backend/: .env.example  Makefile  pyproject.toml  run_api.sh
backend/src/adapters/: __init__.py  ssh_tunnel.py
backend/src/adapters/oracle/: __init__.py  queries.py  reader.py
backend/src/api/: dependencies.py  main.py  state.py
backend/src/api/routers/: __init__.py  connections.py  health.py  tables.py
backend/src/api/schemas/: connection.py  tables.py
backend/src/core/: exceptions.py
backend/src/core/interfaces/: database_reader.py  markdown_renderer.py  tunnel_manager.py
backend/src/core/models/: column.py  constraint.py  table.py  trigger.py
backend/src/services/: markdown_service.py
backend/tests/: conftest.py
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AnalysisDashboard.tsx  ConnectionForm.tsx  GeneratePanel.tsx  Modal.tsx  SchemaSelector.tsx  Spinner.tsx  TableSelector.tsx  Toast.tsx
frontend/src/context/: AppContext.tsx
(+3 files in other folders)
